--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,5 +1,5 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: one@one.org
-  password_digest: hashed_password
+  email: one@gmail.com
+  password_digest: <%= BCrypt::Password.create('g00dPass') %>
