--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,5 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 1,
   email: one@gmail.com
+  password_digest: <%= BCrypt::Password.create('g00dPass') %>
+
+two:
+  id: 2,
+  email: two@gmail.com
   password_digest: <%= BCrypt::Password.create('g00dPass') %>
